# SalahNow-CLI

./: .gitignore  LICENSE  README.md  pyproject.toml
salahnow_cli/: cache.py  cli.py  config.py  location.py  models.py  notify.py  output.py  prayer_api.py  prayer_logic.py
salahnow_cli/data/: __init__.py  locations.json
scripts/: install.sh  release_check.sh
tests/: test_api_resilience.py  test_cache.py  test_prayer_logic.py  test_source_resolution.py
