[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "salahnow-cli"
version = "0.2.0"
description = "SalahNow command-line prayer times"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "SalahNow contributors" }
]
keywords = ["prayer-times", "salah", "islam", "cli", "diyanet", "aladhan"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Topic :: Utilities",
]
dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13.7,<15.0",
  "httpx>=0.27,<1.0"
]

[project.urls]
Homepage = "https://github.com/blcnyy/salahnow"
Source = "https://github.com/blcnyy/salahnow"
Issues = "https://github.com/blcnyy/salahnow/issues"

[project.scripts]
salahnow = "salahnow_cli.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["salahnow_cli"]

[tool.hatch.build.targets.wheel.force-include]
"salahnow_cli/data/locations.json" = "salahnow_cli/data/locations.json"

[tool.hatch.build.targets.sdist]
include = [
  "salahnow_cli",
  "README.md",
  "LICENSE",
  "pyproject.toml",
  "scripts/install.sh",
]
